# brownie

./: Brownie.md  Development_Progress_GSoC_2010.md  Miscellany.md  ProjectHome.md  brownie.cpp  brownie.h  brownieWX.cpp  brownie_inouttests.R  brownie_writetests.R  build_r  build_r.win  build_static.win  check_r  clean_r  diagnostics.R  dl.cpp  dyn_mle.R  dynamical_prog.R  future.runit.01.R  geospiza.nex  makefile  makefiledebugmalloc  makefilestatic  optimizationfn.cpp  optimizationfn.h  parrot.nex  run_libtest  run_libtest.win  simmap_tests.R  test.cpp  test_phyext.R  unittests_brownie_analyses.R  unittests_phyext.R  version.h
RBrownie/: DESCRIPTION  NAMESPACE  cleanup.win  configure  configure.in  configure.win
RBrownie/R/: analyses.R  browniePlots.R  ci.R  class-brownie.R  class-phylo4d_ext.R  constructAnalyses.R  methods-brownie.R  methods-phylo4d_ext.R  phyextPlots.R  processBrownie.R  processNexus.R  rcpp_hello_world.R  readAnalyses.R  readWrite.R  setAs-methods.R  zzz.R
RBrownie/data/: N1.rda  geospiza_ext.rda  k.rda  parrot.rda  y.rda
RBrownie/inst/: CITATION
RBrownie/inst/doc/: users_guide.Rnw
RBrownie/man/: addCensored.Rd  addChoose.Rd  addDiscrete.Rd  addEndLog.Rd  addHS.Rd  addLiteral.Rd  addModel.Rd  addNonCensored.Rd  addStartLog.Rd  addSubNode.Rd  addTipvariance.Rd  addcmd.binary.Rd  addcmd.freq.Rd  addcmd.model.continuous.Rd  addcmd.model.discrete.Rd  addcmd.states.Rd  addcmd.tvtype.Rd  areTaxaMono.Rd  areTaxaMutex.Rd  areTaxaPara.Rd  as.contData.Rd  as.discData.Rd  brownie-class.Rd  brownie-methods.Rd  brownie.datatypes.Rd  brownie.freqs.Rd  brownie.models.continuous.Rd  brownie.models.discrete.Rd  brownie.tvtypes.Rd  check.empty.Rd  check.freq.Rd  check.statevector.Rd  checkBrownie.Rd  checkCommands.Rd  checkDataTypes.Rd  checkMono.Rd  checkPara.Rd  checkval.dummy.Rd  checkval.integer.Rd  checkval.model.discrete.Rd  (+62 more)
RBrownie/src/: Makevars.in  analyses.cpp  analyses.h  browniecmds.h  dl.h  dlInterface.cpp  dlInterface.h  rcpp_hello_world.cpp  rcpp_hello_world.h
branches/brownie_jcs/RBrownie/: DESCRIPTION  NAMESPACE  cleanup  cleanup.win  configure.in  configure.win
branches/brownie_jcs/RBrownie/R/: Rpack-internal.R  analyses.R  check-functions.R  class-brownie.R  class-datatypes.R  class-phylo4d_ext.R  constructAnalyses.R  methods-brownie.R  methods-phylo4d_ext.R  phyextPlots.R  processBrownie.R  processNexus.R  rcpp_hello_world.R  readAnalyses.R  readWrite.R  setAs-brownie.R  setAs-methods.R  setAs-phyext.R
branches/brownie_jcs/RBrownie/data/: Nk.bi.rda  geospiza_ext.rda  jj.rda  parrot.rda  x.rda
branches/brownie_jcs/RBrownie/man/: RBrownie.Rd  addCensored.Rd  addChoose.Rd  addDiscrete.Rd  addEndLog.Rd  addHS.Rd  addLiteral.Rd  addModel.Rd  addNonCensored.Rd  addNumopt.Rd  addOpt.Rd  addStartLog.Rd  addSubNode.Rd  addTipvariance.Rd  addcmd.literal.Rd  addcmd.taxaset.Rd  areTaxaMono.Rd  areTaxaMutex.Rd  as.contData.Rd  as.discData.Rd  brownie-class.Rd  brownie-methods.Rd  brownie.models.continuous.Rd  brownie.models.discrete.Rd  brownie.tvtypes.Rd  check.freq.Rd  checkBrownie.Rd  checkCommands.Rd  checkDataTypes.Rd  checkMono.Rd  checkPara.Rd  checkval.model.continuous.Rd  checkval.ratemat.Rd  clearCommands.Rd  collapse.singletons.Rd  collapse.to.singles.Rd  contData.Rd  discData.Rd  execute.brownie.Rd  expand.singles.Rd  (+59 more)
branches/brownie_jcs/RBrownie/src/: Makevars.in  Makevars.in.win  analyses.cpp  dl.h  (+6 more)
(+184 files in other folders)
